<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradiant_base"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/password_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="30dp"
            android:enabled="false"
            android:hint="00000000"
            android:textColor="@color/gray"
            android:textColorHint="@color/gray"
            android:maxLength="8"
            android:minHeight="40dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/keyboard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:divider="@drawable/keyboard_divider"
            android:gravity="center"
            android:orientation="vertical"
            android:showDividers="beginning|middle|end">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/t9_key_1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/keyboard_button_bg"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="tvOnClickLogin"
                    android:padding="12dp"
                    android:paddingBottom="12dp"
                    android:scaleType="centerInside"
                    android:text="@string/number_one"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/t9_key_2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/keyboard_button_bg"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="tvOnClickLogin"
                    android:padding="12dp"
                    android:paddingBottom="12dp"
                    android:scaleType="centerInside"
                    android:text="@string/number_two"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/t9_key_3"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/keyboard_button_bg"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="tvOnClickLogin"
                    android:padding="12dp"
                    android:paddingBottom="12dp"
                    android:scaleType="centerInside"
                    android:text="@string/number_three"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/t9_key_4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/keyboard_button_bg"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="tvOnClickLogin"
                    android:padding="12dp"
                    android:paddingBottom="12dp"
                    android:scaleType="centerInside"
                    android:text="@string/number_four"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/t9_key_5"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/keyboard_button_bg"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="tvOnClickLogin"
                    android:padding="12dp"
                    android:paddingBottom="12dp"
                    android:scaleType="centerInside"
                    android:text="@string/number_five"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/t9_key_6"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/keyboard_button_bg"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="tvOnClickLogin"
                    android:padding="12dp"
                    android:paddingBottom="12dp"
                    android:scaleType="centerInside"
                    android:text="@string/number_six"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/t9_key_7"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/keyboard_button_bg"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="tvOnClickLogin"
                    android:padding="12dp"
                    android:paddingBottom="12dp"
                    android:scaleType="centerInside"
                    android:text="@string/number_seven"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/t9_key_8"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/keyboard_button_bg"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="tvOnClickLogin"
                    android:padding="12dp"
                    android:paddingBottom="12dp"
                    android:scaleType="centerInside"
                    android:text="@string/number_eight"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/t9_key_9"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"
                    android:background="@drawable/keyboard_button_bg"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="tvOnClickLogin"
                    android:padding="12dp"
                    android:paddingBottom="12dp"
                    android:scaleType="centerInside"
                    android:text="@string/number_nine"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/t9_key_backspace"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/ic_arrow_back_black_24dp"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="tvOnClickLogin"
                    android:scaleType="centerInside"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/gray" />

                <TextView
                    android:id="@+id/t9_key_0"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/keyboard_button_bg"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="tvOnClickLogin"
                    android:padding="12dp"
                    android:paddingBottom="12dp"
                    android:scaleType="centerInside"
                    android:text="@string/number_zero"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/t9_key_clear"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/keyboard_button_bg"
                    android:clickable="true"
                    android:gravity="center"
                    android:onClick="tvOnClickLogin"
                    android:scaleType="centerInside"
                    android:text="@string/btn_clear"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:visibility="invisible" />

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>


</LinearLayout>